@@ -3,9 +3,12 @@ import classNames from 'classnames';
 import PropTypes from 'prop-types';
 import React from 'react';
 import { Link } from 'react-router-dom';
+
 import { PropTypes as MicromagPropTypes } from '../../lib';
-import styles from '../../styles/buttons/button.module.scss';
+
 import Label from '../partials/Label';
+
+import styles from '../../styles/buttons/button.module.scss';
 
 const propTypes = {
     type: PropTypes.string,
@@ -28,6 +31,7 @@ const propTypes = {
     big: PropTypes.bool,
     withShadow: PropTypes.bool,
     withoutStyle: PropTypes.bool,
+    withoutBootstrapStyles: PropTypes.bool,
     withoutTheme: PropTypes.bool,
     outline: PropTypes.bool,
     asLink: PropTypes.bool,
@@ -64,6 +68,7 @@ const defaultProps = {
     big: false,
     withShadow: false,
     withoutStyle: false,
+    withoutBootstrapStyles: false,
     withoutTheme: false,
     outline: false,
     asLink: false,
@@ -95,6 +100,7 @@ const Button = ({
     big,
     withShadow,
     withoutStyle,
+    withoutBootstrapStyles,
     withoutTheme,
     asLink,
     outline,
@@ -182,12 +188,14 @@ const Button = ({
     const withStyle = !withoutTheme && !withoutStyle && !asLink;
 
     const buttonClassNames = classNames([
-        {
-            btn: withStyle,
-            [`btn-${outline ? 'outline-' : ''}${theme}`]: withStyle && theme !== null,
-            [`btn-${size}`]: withStyle && size !== null,
-            active: !withoutStyle && active,
-        },
+        !withoutBootstrapStyles
+            ? {
+                  btn: withStyle,
+                  [`btn-${outline ? 'outline-' : ''}${theme}`]: withStyle && theme !== null,
+                  [`btn-${size}`]: withStyle && size !== null,
+                  active: !withoutStyle && active,
+              }
+            : null,
         styles.container,
         {
             [styles.withoutStyle]: withoutStyle,
