@@ -4,23 +4,17 @@ import PropTypes from 'prop-types';
 import React from 'react';
 import { useIntl } from 'react-intl';
 
-import { PropTypes as MicromagPropTypes } from '@micromag/core';
-
 import IconButton from './IconButton';
 
 const propTypes = {
     className: PropTypes.string,
-    onClick: PropTypes.func,
-    theme: MicromagPropTypes.viewerTheme,
 };
 
 const defaultProps = {
     className: null,
-    onClick: null,
-    theme: null,
 };
 
-const CloseButton = ({ className, onClick, theme, ...props }) => {
+const CloseButton = ({ className, ...props }) => {
     const intl = useIntl();
 
     return (
@@ -45,7 +39,6 @@ const CloseButton = ({ className, onClick, theme, ...props }) => {
                     <polygon points="9.95 4.11 8.89 3.05 5 6.94 1.11 3.05 0.05 4.11 3.94 8 0.05 11.89 1.11 12.95 5 9.06 8.89 12.95 9.95 11.89 6.06 8 9.95 4.11" />
                 </svg>
             }
-            onClick={onClick}
             {...props}
         />
     );
