@@ -3,29 +3,19 @@ import classNames from 'classnames';
 import PropTypes from 'prop-types';
 import React from 'react';
 
-import { PropTypes as MicromagPropTypes } from '@micromag/core';
-
 import Button from './Button';
 
 import styles from '../../styles/buttons/icon-button.module.scss';
 
 const propTypes = {
     className: PropTypes.string,
-    onClick: null,
-    label: PropTypes.node,
-    icon: PropTypes.node,
-    theme: MicromagPropTypes.viewerTheme,
 };
 
 const defaultProps = {
     className: null,
-    onClick: null,
-    label: null,
-    icon: null,
-    theme: null,
 };
 
-const IconButton = ({ className, onClick, label, icon, theme, ...props }) => (
+const IconButton = ({ className, ...props }) => (
     <Button
         className={classNames([
             styles.container,
@@ -35,9 +25,6 @@ const IconButton = ({ className, onClick, label, icon, theme, ...props }) => (
         ])}
         labelClassName={styles.label}
         iconClassName={styles.icon}
-        label={label}
-        icon={icon}
-        onClick={onClick}
         {...props}
     />
 );
