@@ -148,6 +148,8 @@
 
 .screensFrame {
     @extend %fullscreen;
+
+    z-index: 1;
     touch-action: none;
 }
 
